# Elementclc_Course_Manage_v3

./: .gitignore  ARCHITECTURE.md  Cargo.toml  api_seed.py  generate_receipts.py  hash_test.rs  makeup_checkin_flow.excalidraw  mindmap_v2.excalidraw  schema.sql  seed.py  seed_class6_enrollments.py  seed_comprehensive.py  seed_data.py  seed_july2026.py  seed_july_v2.py
diagrams/: frontend_logic.excalidraw  mindmap.excalidraw  ui_architecture.excalidraw
frontend/: index.html  package-lock.json  package.json
output_receipts/: receipt_00010_吳 俊賢.docx  receipt_00011_許 德華.docx  receipt_00012_劉 宇軒.docx  receipt_00013_謝 卓賢.docx  receipt_00014_黃 俊賢.docx  receipt_00015_郭 啟豪.docx  receipt_00016_馬 家偉.docx  receipt_00017_徐 銘杰.docx  receipt_00018_蘇 曉明.docx  receipt_00019_范 啟豪.docx  receipt_00020_余 景軒.docx  receipt_00021_廖 啟豪.docx  receipt_00022_盧 文杰.docx  receipt_00023_廖 浩天.docx  receipt_00024_吳 冠中.docx  receipt_00025_邱 德華.docx  receipt_00027_余 朗賢.docx  receipt_00028_蕭 子軒.docx  receipt_00030_洪 志豪.docx  receipt_00031_曹 浩天.docx  receipt_00032_邱 志豪.docx  receipt_00033_高 志豪.docx  receipt_00034_歐陽 志豪.docx  receipt_00035_唐 文杰.docx  receipt_00036_盧 俊賢.docx  receipt_00037_蔡 德華.docx  receipt_00039_梁 文杰.docx  receipt_00040_袁 志豪.docx  receipt_00041_夏 子軒.docx  receipt_00042_許 文杰.docx  receipt_00043_盧 冠中.docx  receipt_00045_董 潔瑩.docx  receipt_00046_袁 芷晴.docx  receipt_00047_李 曉彤.docx  receipt_00048_梁 凱琳.docx  receipt_00049_楊 佩珊.docx  receipt_00050_戴 梓珊.docx  receipt_00051_高 凱晴.docx  receipt_00053_羅 潔瑩.docx  receipt_00054_朱 樂兒.docx  (+13 more)
scripts/: seed_test_data.py
src/: auth.rs  config.rs  db.rs  (+4 more)
(+37 files in other folders)
